--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4905,15 +4905,15 @@ button.close {
 
 @font-face {
   font-family: SourceSansPro-Regular;
-  src: url("../fonts/SourceSansPro-Regular.otf"); }
+  src: url(../fonts/SourceSansPro-Regular.otf); }
 
 @font-face {
   font-family: SourceSansPro-Bold;
-  src: url("../fonts/SourceSansPro-Bold.otf"); }
+  src: url(../fonts/SourceSansPro-Bold.otf); }
 
 @font-face {
   font-family: SourceSansPro-Semibold;
-  src: url("../fonts/SourceSansPro-Semibold.otf"); }
+  src: url(../fonts/SourceSansPro-Semibold.otf); }
 
 #header {
   margin-top: 30px; }
@@ -4988,25 +4988,26 @@ button.close {
 .navbar-default .navbar-nav > li > a {
   color: black; }
 
+.navbar-inverse .navbar-nav > li > a {
+  color: white; }
+
 .tabs li {
-  margin-bottom: 20px;
   font-family: SourceSansPro-Regular;
   background-color: #ededed;
   font-size: 22px;
   padding-top: 10px;
   padding-bottom: 10px;
-  box-shadow: 0 5px 0 #cac6c6; }
+  border-bottom: 2px solid #cac6c6; }
 .tabs a {
   outline: none; }
 .tabs .active {
-  background-color: #cccccc;
-  margin-left: -2px; }
+  background-color: white; }
 
 .procedure {
   overflow: hidden;
   margin: 0; }
   .procedure .border {
-    border-right: 2px solid #e5e5e5; }
+    border-right: 1px solid #CAC6C6; }
 
 .image {
   width: 100%;
@@ -5081,13 +5082,15 @@ button.close {
   border: 1px solid #53c8ab;
   color: #53c8ab;
   border-radius: 4px;
-  padding: 5px;
+  padding: 1px 10px;
   position: relative;
-  top: 60px;
-  text-decoration: none; }
+  top: 12px;
+  text-decoration: none;
+  font-family: SourceSansPro-Regular;
+  font-size: 18px; }
 
 .doc {
-  margin-top: 45px;
+  padding-top: 45px;
   height: 447px;
   padding-bottom: 40px; }
   .doc img {
@@ -5096,22 +5099,24 @@ button.close {
     border-radius: 50%; }
   .doc h3 {
     font-family: SourceSansPro-Semibold;
-    font-size: 30px; }
+    font-size: 32px;
+    color: #959595;
+    margin-top: -5px; }
   .doc p {
     font-family: SourceSansPro-Regular;
-    font-size: 16px; }
+    font-size: 20px; }
   .doc #text {
     margin-top: 40px;
     margin-left: 0; }
 
 .name h3 {
   background-color: #ededed;
-  font-size: 18px;
+  font-size: 20px;
   width: 100%;
   height: auto;
   padding: 25px 0 25px 33px;
   margin-top: 0;
-  font-family: SourceSansPro-Semibold; }
+  font-family: SourceSansPro-Bold; }
 
 .form {
   background-color: #ededed;
@@ -5149,12 +5154,6 @@ button.close {
     font-family: SourceSansPro-Regular;
     box-shadow: 0 4px 0 0 #df5f69;
     outline: none; }
-
-.connect {
-  border: 2px solid #d55f61;
-  border-radius: 5px;
-  margin-bottom: 0;
-  margin-top: 9px; }
 
 .post_img {
   height: auto;
@@ -5245,11 +5244,14 @@ a:focus {
   border-width: 0; }
   .panel-default .panel-heading {
     margin-top: 20px;
-    background-color: #f9f9f9; }
+    background-color: #EDEDED;
+    padding: 12px 15px; }
   .panel-default .panel-title a {
     outline: none; }
   .panel-default .panel-title .accordion .title {
-    padding-top: 5px; }
+    padding-top: 5px;
+    font-family: SourceSansPro-Regular;
+    font-size: 16px; }
   .panel-default .panel-title .accordion .price {
     padding-top: 5px;
     text-align: right; }
@@ -5259,9 +5261,9 @@ a:focus {
     font-size: 16px;
     font-family: SourceSansPro-Regular;
     height: auto;
-    padding: 3px 12px;
+    padding: 1px 12px;
     border-color: #ff6c6f;
-    box-shadow: 0 4px 0 0 #b24b4d; }
+    box-shadow: 0 3px 0 0 #b24b4d; }
   .panel-default .panel-title .accordion .btn-primary.doc_btn {
     background-color: #53c8ab;
     color: white;
@@ -5325,10 +5327,11 @@ a:focus {
   background-color: #d6d2d2;
   color: black;
   margin-top: 0;
-  font-size: 22px;
+  font-size: 18px;
   font-family: SourceSansPro-Regular;
   width: 100%;
-  padding: 15px 13px; }
+  padding: 15px 13px;
+  text-align: center; }
 
 .doctor {
   padding-left: 25px; }
@@ -5359,8 +5362,8 @@ a:focus {
   color: white;
   background-color: #53c8ab;
   border-radius: 5px;
-  width: 103.5%;
-  margin-left: -5px;
+  width: 70%;
+  margin-bottom: 10px;
   padding: 4px 12px;
   font-family: SourceSansPro-Semibold;
   font-size: 16px;
@@ -5368,16 +5371,26 @@ a:focus {
 
 .btn-primary.rais {
   width: 80%;
+  padding: 4px 12px;
   background-color: #ff6c6f;
   height: auto;
   border-color: #ff6c6f;
-  box-shadow: 0 4px 0 0 #b24b4d;
-  font-family: SourceSansPro-Semibold; }
+  box-shadow: 0 3px 0 0 #b24b4d;
+  font-family: SourceSansPro-Semibold;
+  margin-top: 2px; }
   .btn-primary.rais .search_doc {
     font-size: 15px; }
 
+.connect {
+  background-color: #ff6c6f;
+  border-color: #ff6c6f;
+  box-shadow: 0 2px 0 0 #B24B4D;
+  font-family: SourceSansPro-Regular;
+  font-size: 16px;
+  padding: 1px 12px; }
+
 .qwe {
-  padding-left: 0;
+  padding-left: 16px;
   padding-right: 0; }
 
 .accordion_doc .pro {
@@ -5406,7 +5419,8 @@ a:focus {
     text-align: left; }
     .hero .container .pp {
       padding-left: 20px;
-      padding-bottom: 11px; }
+      padding-bottom: 11px;
+      margin-bottom: 40px; }
       .hero .container .pp .border_doc {
         border-bottom: 5px solid #ff6c6f;
         width: 10%;
@@ -5421,7 +5435,7 @@ a:focus {
       margin-bottom: 0;
       font-family: SourceSansPro-Regular; }
     .hero .container .form-group {
-      padding: 0px 0px 0px 15px; }
+      padding: 0 0 0 15px; }
       .hero .container .form-group .form-control {
         width: 100%;
         height: auto;
