--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,5 +1,11 @@
 {{!< default}}
 <div class="container">
-	<div class="jumbotron"><img src="/images/logo.svg" width="160">
+	<div class="jumbotron">
+		<img src="/images/logo.svg" width="160">
 		<h1>Welcome</h1>
-</div>
+		hdjsfjdblkj
+		{{specialities}}
+		{{#each provider}}
+			{{name}}
+		{{/each}}
+	</div>
