--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -45,7 +45,7 @@
 							<ul class="nav navbar-nav navbar-right">
 								{{# each navs}}
 								<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16px;">
-									<a href="{{ href }}" style="">{{ label }}</a>
+									<a href="{{ href }}" style="color:#959595">{{ label }}</a>
 								</li>
 								{{/each}}
 							</ul>
@@ -55,12 +55,12 @@
 					<div class="collapse navbar-collapse" style="margin-right:20px;">
 						<ul class="nav navbar-nav navbar-right">
 							{{# each navLinks}}
-							<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:17px;margin-left:-10px;">
+							<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:17px;padding-left:20px;">
 								<a href="{{ href }}" style="outline:none;">{{ label }}</a>
 							</li>
 							{{/each}}
-
-							<li > <a class="connect" style="padding: 3px 8px;color: #D55F61;" href="/contact">Connect</a></li>
+             <li style="padding-left:35px;"><button type="submit" class="btn btn-primary btn-md connect" style="background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none;margin-top:10px;	">connect</button><li>
+							<!-- <li style="padding-left:35px"> <a class="connect" style="padding: 3px 8px;color: #D55F61; font-family: SourceSansPro-Regular;font-size:17px" href="#" data-toggle="modal" data-target="#myModal">Connect</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -155,6 +155,184 @@
 			</div>
 		</nav>
 	</div>
+
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="margin-top: 100px; ">
+	  <div class="modal-dialog" role="document" style="width:60%;">
+	    <div class="modal-content" >
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+	      <div class="modal-body">
+					<form class="form-horizontal row ">
+						<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+						</div>
+		    <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2">
+		    <label for="exampleInputName2"> Full Name</label>
+				</div>
+				<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3">
+				<input type="text" class="form-control" id="exampleInputName2" placeholder="Prefix">
+			</div>
+		  <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3">
+       <input type="text" class="form-control" id="exampleInputEmail2" placeholder="First Name">
+		  </div>
+			<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3">
+       <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Last Name">
+		  </div>
+			<!-- <div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div> -->
+		</form>
+
+		<form class="form-horizontal row">
+			<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div>
+		<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2">
+    <label for="exampleInputEmail1" >Email address</label>
+	</div>
+	<div class=" col-lg-8 col-xs-8 col-sm-8 col-md-8">
+  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+		</div>
+		<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+		</div>
+	</form>
+
+
+		<form class="form-horizontal row">
+			<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div>
+			<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2" >
+			  <label for="exampleInputName2"> Mobile No</label>
+			</div>
+			<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2" >
+				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Code">
+			</div>
+			<div class=" col-lg-6 col-xs-6 col-sm-6 col-md-6">
+				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Mobile no">
+			</div>
+			<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div>
+		</form>
+
+		<form class="form-horizontal row">
+			<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div>
+			<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2">
+				<label for="exampleInputName2"> Query </label>
+			</div>
+			<div class="col-lg-8 col-xs-8 col-sm-8 col-md-8">
+			<textarea class="form-control" rows="3"></textarea>
+		</div>
+      <div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+			</div>
+		</form>
+		<!-- <img id="captcha" src="library/vender/securimage/securimage_show.php" alt="CAPTCHA Image" />
+		      <a href="#" onclick="document.getElementById('captcha').src = 'library/vender/securimage/securimage_show.php?' + Math.random(); return false" class="btn btn-info btn-sm">Show a Different Image</a><br/>
+		      <div class="form-group" style="margin-top: 10px;">
+		        <input type="text" class="form-control" name="captcha_code" id="captcha_code" placeholder="For security, please enter the code displayed in the box." />
+		        <span class="help-block" style="display: none;">Please enter the code displayed within the image.</span>
+		      </div> -->
+
+
+					<!-- <script type="text/javascript">
+		var RecaptchaOptions = {
+			 theme : 'custom',
+			 custom_theme_widget: 'recaptcha_widget'
+		};
+</script>
+
+<form method="post" action="<?php echo $base_url; ?>user/register/check" method="post" class="form-horizontal well" accept-charset="UTF-8">
+
+									 <script type="text/javascript">
+												var RecaptchaOptions = {
+													 theme : 'custom',
+													 custom_theme_widget: 'recaptcha_widget'
+												};
+									 </script>
+									 <div id="recaptcha_widget" style="display:none">
+
+											 <div class="control-group">
+													 <label class="control-label"></label>
+													 <div class="controls">
+															 <a id="recaptcha_image" href="#" class="thumbnail"></a>
+															 <div class="recaptcha_only_if_incorrect_sol" style="color:red">Incorrect please try again</div>
+													 </div>
+											 </div>
+
+													<div class="control-group">
+															<label class="recaptcha_only_if_image control-label">Enter the words above:</label>
+														 <label class="recaptcha_only_if_audio control-label">Enter the numbers you hear:</label>
+
+														 <div class="controls">
+																 <div class="input-append">
+																		 <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" class="input-recaptcha" />
+																		 <a class="btn" href="javascript:Recaptcha.reload()"><i class="icon-refresh"></i></a>
+																		 <a class="btn recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')"><i title="Get an audio CAPTCHA" class="icon-headphones"></i></a>
+																		 <a class="btn recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')"><i title="Get an image CAPTCHA" class="icon-picture"></i></a>
+																	 <a class="btn" href="javascript:Recaptcha.showhelp()"><i class="icon-question-sign"></i></a>
+																 </div>
+														 </div>
+											 </div>
+
+									 </div>
+
+									 <script type="text/javascript"
+											src="<?php echo $recaptcha_url; ?>">
+									 </script>
+
+									 <noscript>
+											 <iframe src="<?php echo $recaptcha_noscript_url; ?>"
+													height="300" width="500" frameborder="0"></iframe><br>
+											 <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+											 </textarea>
+											 <input type="hidden" name="recaptcha_response_field"
+													value="manual_challenge">
+										 </noscript>
+</form>
+<script type="text/javascript" src="https://www.google.com/recaptcha/api/challenge?k=6LcrK9cSAAAAALEcjG9gTRPbeA0yAVsKd8sBpFpR"></script>
+
+<noscript>
+	 <iframe src="<?php echo $recaptcha_noscript_url; ?>"
+			height="300" width="500" frameborder="0"></iframe><br>
+	 <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+	 </textarea>
+	 <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+</noscript> -->
+<form class="form-horizontal row">
+	<div class="col-lg-5 col-xs-5 col-sm-5 col-md-5">
+	</div>
+
+	<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2">
+	  <button type="submit" class="btn btn-default">Enquire</button>
+</div>
+	<div class="col-lg-5 col-xs-5 col-sm-5 col-md-5">
+	</div>
+</form>
+
+<form class="form-horizontal row">
+	<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+	</div>
+	<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3">
+		<label for="exampleInputName2"> Please enter your contact details</label>
+	</div>
+	<div class=" col-lg-2 col-xs-2 col-sm-2 col-md-2">
+		<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Code">
+	</div>
+	<div class=" col-lg-5 col-xs-5 col-sm-5 col-md-5">
+		<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Mobile no">
+	</div>
+	<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
+	</div>
+</form>
+
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
 	{{!-- //- jQuery 1.11.1 is included by default, and required by both Bootstrap //- and the KeystoneJS Content Editor. If you are not targeting IE8, //- you can upgrade to 2.1.3 (also bundled) for better performance. --}}
 	<script src="/js/jquery/jquery-1.11.2.min.js"></script>
 	<script src="/js/jquery/jquery.autocomplete.js"></script>
