--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -2,7 +2,7 @@
 	<!-- <div class="box"> -->
 	<div class="row box">
 		<div class="col-sm-6">
-			<img src="images/logo-email.gif" style="margin-top: 100px; margin-left: 50px;margin-bottom:100px;">
+			<img src="images/logo-big.png" style="width: 100%; height:auto;padding-top: 80px;">
 		</div>
 		<div class="col-sm-6 col">
 			<form class="form-horizontal" method="post">
