--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -15,6 +15,7 @@ $icon-font-path: "../fonts/";
 				font-family: SourceSansPro-Semibold;
 				src: url(../fonts/SourceSansPro-Semibold.otf);
 }
+
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
 // versions is to override the ones you want in another file.
@@ -22,6 +23,7 @@ $icon-font-path: "../fonts/";
 // You can also add your own custom variables to this file for
 // use in your site stylesheets.
 @import "site/variables";
+
 // Site Styles
 // ===========
 // Add your own site style includes here
@@ -36,11 +38,13 @@ $icon-font-path: "../fonts/";
 				border-bottom: 1px solid #e5e5e5;
 				width: 100%;
 				margin-left: 2px;
+
 				// margin-bottom: 20px;
 }
 .provider-img {
 				padding: 20px;
 				border-radius: 8px;
+
 				// width: 350px;
 				// height: 300px;
 }
@@ -86,16 +90,15 @@ $icon-font-path: "../fonts/";
 				li {
 								font-family: SourceSansPro-Regular;
 								font-size: 16px;
-
 				}
 				a {
 								outline: none;
-
 				}
 }
 .navbar-default .navbar-nav > li > a {
 				color: black;
 }
+
 // .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
 //     background-color: #2b2b2b;
 //     color: #D55F61;
@@ -105,12 +108,12 @@ $icon-font-path: "../fonts/";
 }
 .tabs {
 				li {
-
 								font-family: SourceSansPro-Regular;
 								background-color: rgb(237,237,237);
 								font-size: 22px;
 								padding-top: 10px;
 								padding-bottom: 10px;
+
 								// box-shadow: 0 5px 0 #cac6c6;
 								border-bottom: 2px solid #cac6c6;
 				}
@@ -119,6 +122,7 @@ $icon-font-path: "../fonts/";
 				}
 				.active {
 								background-color: white;
+
 								// margin-left: -2px;
 				}
 }
@@ -157,6 +161,7 @@ $icon-font-path: "../fonts/";
 #bio {
 				font-size: 16px;
 				margin-top: 45px;
+
 				// border-bottom: 2px solid #e5e5e5;
 				padding-bottom: 40px;
 				margin-left: -40px;
@@ -283,6 +288,7 @@ $icon-font-path: "../fonts/";
 												padding: 8px 0 0 8px;
 												border: 1px solid #ccc;
 								}
+
 								// .dropdown {
 								// 				margin-left: 20px;
 								// 				width: 100px;
@@ -302,9 +308,11 @@ $icon-font-path: "../fonts/";
 								font-family: SourceSansPro-Regular;
 								box-shadow: 0 4px 0 0 rgb(223,95,105);
 								outline: none;
+
 								// box-shadow: 0 2px 0 0 rgb(223,95,105);
 				}
 }
+
 // .connect {
 // 				border: 2px solid #d55f61;
 // 				border-radius: 5px;
@@ -383,6 +391,7 @@ a:focus {
 }
 #education,
 #awards {
+
 				// margin-left: -32px;
 				// border-top:2px solid #e5e5e5;
 				// width:770px;
@@ -399,6 +408,7 @@ a:focus {
 				box-shadow: 0 4px 0 0 rgb(223,95,105);
 				border-color: rgb(255,108,111);
 }
+
 // .btn-primary.provider_btn {
 // 				box-shadow: 0 4px 0 0 rgb(223,95,105);
 // 				border-color: rgb(255,108,111);
@@ -411,7 +421,9 @@ a:focus {
 				width: 50%;
 				height: auto;
 }
-.spec {}
+.spec {
+
+}
 .doc_proc {
 				padding-bottom: 20px;
 				.doc_border {
@@ -436,6 +448,11 @@ a:focus {
 																padding-top: 5px;
 																font-family: SourceSansPro-Regular;
 																font-size: 16px;
+																span {
+																				padding-left: 5px;
+																				font-size: 18px;
+																				font-family: SourceSansPro-Semibold;
+																}
 												}
 												.price {
 																padding-top: 5px;
@@ -487,6 +504,7 @@ a:focus {
 .autocomplete-suggestions strong {
 				font-weight: normal;
 				color: rgb(255,108,111);
+
 				// color: #39f;
 }
 .autocomplete-group {
@@ -513,11 +531,13 @@ a:focus {
 								font-size: 16px;
 				}
 				 :-ms-input-placeholder {
+
 								// color: red;
 								font-family: SourceSansPro-Regular;
 								font-size: 16px;
 				}
 }
+
 // .jumbotron {
 // 				background-image: url("../images/Meet the Doctors.jpg");
 // 				width: 100%;
@@ -541,7 +561,7 @@ a:focus {
 .doctor {
 				padding-left: 25px;
 				.thumbnail {
-								border-bottom-width: 0;
+							// border-bottom-width: 1px;
 								margin-top: 30px;
 								height: auto;
 								width: auto;
@@ -570,12 +590,11 @@ a:focus {
 				background-color: rgb(83, 200, 171);
 				border-radius: 5px;
 				width: 70%;
-			margin-bottom: 10px;
+				margin-bottom: 10px;
 				padding: 4px 12px;
 				font-family: SourceSansPro-Semibold;
 				font-size: 16px;
 				box-shadow: 0 3px 0 0 #317866;
-
 }
 .btn-primary.rais {
 				width: 80%;
@@ -597,19 +616,27 @@ a:focus {
 				font-family: SourceSansPro-Regular;
 				font-size: 16px;
 				padding: 1px 12px;
+
 				// width:80px;
 }
 .qwe {
 				padding-left: 16px;
 				padding-right: 0;
 }
-.accordion_doc {
-				.pro {
-								font-family: SourceSansPro-Regular;
-								font-size: 18px;
-				}
-				.icon {
-								color: #d6d2d2;
+.panel_doc {
+				margin-top: -10px;
+				.panel_heading {
+								margin-top: -5px;
+								border-bottom: 2px solid #cac6c6;
+								.accordion_doc {
+												.pro {
+																font-family: SourceSansPro-Regular;
+																font-size: 16px;
+												}
+												.icon {
+																color: #d6d2d2;
+												}
+								}
 				}
 }
 .hero {
@@ -692,6 +719,7 @@ a:focus {
 																				border-bottom: 5px solid #ff6c6f;
 																				width: 25%;
 																				margin: -15px auto 0;
+
 																				// margin-top: -15px;
 																				// margin-bottom: 10px;
 																				// margin-left:220px;
@@ -712,6 +740,7 @@ a:focus {
 																				display: block;
 																}
 																.main_button {
+
 																				// margin: 0 auto;
 																				// display: block;
 																				.btn-primary.rais {
@@ -724,6 +753,7 @@ a:focus {
 																								.search_doc {
 																												font-size: 18px;
 																												font-family: SourceSansPro-Semibold;
+
 																												// width: 100%;
 																								}
 																				}
@@ -737,6 +767,7 @@ a:focus {
 								display: none;
 				}
 				.doctor {
+
 								// width: 271px;
 								.thumbnail {
 												height: 321px;
@@ -749,6 +780,7 @@ a:focus {
 				.hero .container .form-group #proc {
 								text-align: center;
 								margin: 0 auto;
+
 								// margin-left: 200px;
 				}
 }
