--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -106,8 +106,8 @@
 									<h4 class="panel-title">
 										<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
 											<div class="row accordion">
-												<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
-													{{name}} <span style="padding-left: 5px; font-size:18px;font-family: SourceSansPro-Semibold;">+</span>
+												<div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 title">
+													{{name}} <span style="">+</span>
 													<!-- <span class="fa fa-plus-square-o"></span> -->
 												</div>
 													<!-- <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 ">
@@ -115,8 +115,8 @@
 													</div> -->
 													<!-- <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3 ">
 													</div> -->
-												<div class="col-lg-2 col-sm-1 col-xs-2 col-md-2 price">
-													{{price}}
+												<div class="col-lg-4 col-sm-3 col-xs-4 col-md-4 price">
+												<span style="font-size:16px;font-family: SourceSansPro-Regular;">starting from</span><span style="font-size:16px;font-family: SourceSansPro-Semibold;"> USD {{price}}</span>
 												</div>
 												<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
 													<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry" style="">
