--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -7,9 +7,9 @@
 			<nav class="navbar navbar-default">
 				<ul class="nav navbar-nav row" style="padding-top: 8px;">
 					<li class="col-lg-1 col-sm-1 col-xs-1 col-md-1">&nbsp;</li>
-					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#overview" style="padding-top:12px;">Overview</a></li>
+					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#overview" style="padding-top:12px; padding-left: 10px">Overview</a></li>
 					<li class="col-lg-4 col-sm-4 col-xs-4 col-md-4" style="margin-left: 15px;"><a href="#providers" style="padding-top:12px;">Featured Providers</a></li>
-					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#doctors" style="margin-left:-28px;padding-top:12px;">Specialists</a></li>
+					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#doctors" style="margin-left:-16px;padding-top:12px;">Doctors</a></li>
 					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#procedures" style="margin-left: -11px;padding-top:12px;">Procedures</a></li>
 				</ul>
 			</nav>
@@ -75,7 +75,8 @@
 							</div>
 							<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
 								<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
-								<a href="" id="link" style="">View Profile</a>
+								<!-- <a href="" id="link" style="">View Profile</a> -->
+									<span ><input class="btn btn-primary btn-md rai"  type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctor/{{key}}'"></span>
 							</div>
 							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 							</div>
