--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4981,7 +4981,7 @@ button.close {
   border-radius: 0; }
   .navbar-default li {
     font-family: SourceSansPro-Regular;
-    font-size: 16px; }
+    font-size: 16.5px; }
   .navbar-default a {
     outline: none; }
 
@@ -4994,7 +4994,7 @@ button.close {
 .tabs li {
   font-family: SourceSansPro-Regular;
   background-color: #ededed;
-  font-size: 22px;
+  font-size: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 2px solid #cac6c6; }
@@ -5027,7 +5027,7 @@ button.close {
     position: relative;
     top: 10px;
     font-family: SourceSansPro-Semibold;
-    font-size: 18px; }
+    font-size: 16.5px; }
 
 #bio {
   font-size: 16px;
@@ -5053,13 +5053,22 @@ button.close {
     outline: none;
     text-decoration: none; }
 
+.btn-primary.rai {
+  border: 1px solid #53c8ab;
+  color: white;
+  background-color: #53c8ab;
+  box-shadow: 0 3px 0 0 #317866;
+  font-family: SourceSansPro-Regular;
+  font-size: 16px; }
+
 .btn-primary.raised {
-  box-shadow: 0 4px 0 0 #b24b4d;
+  box-shadow: 0 3px 0 0 #b24b4d;
   background-color: #ff6c6f;
   border-color: #ff6c6f;
-  margin-top: 48px;
-  font-family: SourceSansPro-Semibold;
-  font-size: 16px; }
+  margin-top: 53px;
+  font-family: SourceSansPro-Regular;
+  font-size: 16px;
+  padding: 4px 12px; }
 
 .btn-primary.raised.active {
   outline: none;
@@ -5368,18 +5377,18 @@ a:focus {
   width: 70%;
   margin-bottom: 10px;
   padding: 4px 12px;
-  font-family: SourceSansPro-Semibold;
+  font-family: SourceSansPro-Regular;
   font-size: 16px;
   box-shadow: 0 3px 0 0 #317866; }
 
 .btn-primary.rais {
-  width: 80%;
+  width: 90%;
   padding: 4px 12px;
   background-color: #ff6c6f;
   height: auto;
   border-color: #ff6c6f;
   box-shadow: 0 3px 0 0 #b24b4d;
-  font-family: SourceSansPro-Semibold;
+  font-family: SourceSansPro-Regular;
   margin-top: 2px; }
   .btn-primary.rais .search_doc {
     font-size: 15px; }
@@ -5403,7 +5412,7 @@ a:focus {
     border-bottom: 2px solid #cac6c6; }
     .panel_doc .panel_heading .accordion_doc .pro {
       font-family: SourceSansPro-Regular;
-      font-size: 16px; }
+      font-size: 16.5px; }
     .panel_doc .panel_heading .accordion_doc .icon {
       color: #d6d2d2; }
 
@@ -5426,7 +5435,6 @@ a:focus {
     display: table-cell;
     text-align: left; }
     .hero .container .pp {
-      padding-left: 20px;
       padding-bottom: 11px;
       margin-bottom: 40px; }
       .hero .container .pp .border_doc {
