--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -89,7 +89,7 @@ $icon-font-path: "../fonts/";
 				border-radius: 0;
 				li {
 								font-family: SourceSansPro-Regular;
-								font-size: 16px;
+								font-size: 16.5px;
 				}
 				a {
 								outline: none;
@@ -110,7 +110,7 @@ $icon-font-path: "../fonts/";
 				li {
 								font-family: SourceSansPro-Regular;
 								background-color: rgb(237,237,237);
-								font-size: 22px;
+								font-size: 20px;
 								padding-top: 10px;
 								padding-bottom: 10px;
 
@@ -155,7 +155,7 @@ $icon-font-path: "../fonts/";
 								position: relative;
 								top: 10px;
 								font-family: SourceSansPro-Semibold;
-								font-size: 18px;
+								font-size: 16.5px;
 				}
 }
 #bio {
@@ -187,13 +187,23 @@ $icon-font-path: "../fonts/";
 								text-decoration: none;
 				}
 }
+.btn-primary.rai {
+	border: 1px solid rgb(83, 200, 171);
+	color: white;
+	background-color: rgb(83, 200, 171);
+	box-shadow: 0 3px 0 0 #317866;
+	font-family: SourceSansPro-Regular;
+	font-size: 16px;
+
+}
 .btn-primary.raised {
-				box-shadow: 0 4px 0 0 #b24b4d;
+				box-shadow: 0 3px 0 0 #b24b4d;
 				background-color: #ff6c6f;
 				border-color: rgb(255,108,111);
-				margin-top: 48px;
-				font-family: SourceSansPro-Semibold;
+				margin-top: 53px;
+				font-family: SourceSansPro-Regular;
 				font-size: 16px;
+				padding: 4px 12px;
 }
 .btn-primary.raised.active {
 				outline: none;
@@ -592,18 +602,18 @@ a:focus {
 				width: 70%;
 				margin-bottom: 10px;
 				padding: 4px 12px;
-				font-family: SourceSansPro-Semibold;
+				font-family: SourceSansPro-Regular;
 				font-size: 16px;
 				box-shadow: 0 3px 0 0 #317866;
 }
 .btn-primary.rais {
-				width: 80%;
+				width: 90%;
 				padding: 4px 12px;
 				background-color: #ff6c6f;
 				height: auto;
 				border-color: #ff6c6f;
 				box-shadow: 0 3px 0 0 #b24b4d;
-				font-family: SourceSansPro-Semibold;
+				font-family: SourceSansPro-Regular;
 				margin-top: 2px;
 				.search_doc {
 								font-size: 15px;
@@ -631,7 +641,7 @@ a:focus {
 								.accordion_doc {
 												.pro {
 																font-family: SourceSansPro-Regular;
-																font-size: 16px;
+																font-size: 16.5px;
 												}
 												.icon {
 																color: #d6d2d2;
@@ -656,7 +666,7 @@ a:focus {
 								left: 0;
 								width: 100%;
 								.pp {
-												padding-left: 20px;
+												// padding-left: 20px;
 												padding-bottom: 11px;
 												margin-bottom: 40px;
 												.border_doc {
