--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -34,6 +34,36 @@ $icon-font-path: "../fonts/";
 .navbar {
 				margin-bottom: 0;
 }
+.footer {
+				background-color: rgb(34,34,34);
+				.foot {
+								margin-right: 0;
+								margin-left: 0;
+								padding-top: 15px;
+								.f_img {
+												img {
+																width: 30%;
+																height: auto;
+																margin-top: 10px;
+																margin-left: 26px;
+												}
+												p {
+																font-size: 12.5px;
+																font-family: SourceSansPro-Regular;
+																margin-left: 26px;
+																color: white;
+												}
+								}
+								.foot_data {
+												margin-right: 0;
+												margin-left: 0;
+												li {
+																font-size: 12.5px;
+																font-family: SourceSansPro-Regular;
+												}
+								}
+				}
+}
 .provider-box {
 				border-bottom: 1px solid #e5e5e5;
 				width: 100%;
@@ -98,11 +128,6 @@ $icon-font-path: "../fonts/";
 .navbar-default .navbar-nav > li > a {
 				color: black;
 }
-
-// .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-//     background-color: #2b2b2b;
-//     color: #D55F61;
-// }
 .navbar-inverse .navbar-nav > li > a {
 				color: white;
 }
@@ -188,13 +213,12 @@ $icon-font-path: "../fonts/";
 				}
 }
 .btn-primary.rai {
-	border: 1px solid rgb(83, 200, 171);
-	color: white;
-	background-color: rgb(83, 200, 171);
-	box-shadow: 0 3px 0 0 #317866;
-	font-family: SourceSansPro-Regular;
-	font-size: 16px;
-
+				border: 1px solid rgb(83, 200, 171);
+				color: white;
+				background-color: rgb(83, 200, 171);
+				box-shadow: 0 3px 0 0 #317866;
+				font-family: SourceSansPro-Regular;
+				font-size: 16px;
 }
 .btn-primary.raised {
 				box-shadow: 0 3px 0 0 #b24b4d;
@@ -571,7 +595,8 @@ a:focus {
 .doctor {
 				padding-left: 25px;
 				.thumbnail {
-							// border-bottom-width: 1px;
+
+								// border-bottom-width: 1px;
 								margin-top: 30px;
 								height: auto;
 								width: auto;
@@ -666,6 +691,7 @@ a:focus {
 								left: 0;
 								width: 100%;
 								.pp {
+
 												// padding-left: 20px;
 												padding-bottom: 11px;
 												margin-bottom: 40px;
