--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -44,7 +44,7 @@
 					<div class="col-lg-4">
 						<div class="navbar-header">
 							<div class="row">
-								<div class="col-lg-3">
+								<div class="col-lg-2">
 								</div>
 								<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
 									<span class="sr-only">Toggle navigation</span>
@@ -52,9 +52,9 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-								<div class="col-lg-9">
+								<div class="col-lg-10">
 									<a href="/" class="navbar-brand" style="width:100%;height:auto;">
-										<img alt="Goa Medical Travel" src="/images/GMT Identity _Goa Medical Travel White.png" style="width:150;height:72.05px;margin-bottom: 5px; margin-top: 5px;" />
+										<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:70%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 									</a>
 								</div>
 							</div>
@@ -62,37 +62,37 @@
 					</div>
 					<div class="col-lg-8">
 						<div class="row">
-								<div class="col-lg-11">
-						<div class="row">
-							<div class="collapse navbar-collapse">
-								<ul class="nav navbar-nav navbar-right">
-									{{# each navs}}
-									<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
-										<a href="{{ href }}" style="color:#959595; padding-right: 0px;">{{ label }}</a>
-									</li>
-									{{/each}}
-								</ul>
+							<div class="col-lg-11">
+								<div class="row">
+									<div class="collapse navbar-collapse">
+										<ul class="nav navbar-nav navbar-right">
+											{{# each navs}}
+											<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
+												<a href="{{ href }}" style="color:#959595; padding-right: 0px;">{{ label }}</a>
+											</li>
+											{{/each}}
+										</ul>
+									</div>
+								</div>
+								<div class="row" style="padding-top: 10px;">
+									<div class="collapse navbar-collapse">
+										<ul class="nav navbar-nav navbar-right">
+											{{# each navLinks}}
+											<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
+												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);">{{ label }}</a>
+											</li>
+											{{/each}}
+											<li style="padding-left:35px;">
+												<button type="submit" class="btn btn-primary btn-md connect" style="background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none;margin-top:10px;	">connect</button>
+												<li>
+													<!-- <li style="padding-left:35px"> <a class="connect" style="padding: 3px 8px;color: #D55F61; font-family: SourceSansPro-Regular;font-size:17px" href="#" data-toggle="modal" data-target="#myModal">Connect</a></li> -->
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-1">
 							</div>
 						</div>
-						<div class="row" style="padding-top: 10px;">
-							<div class="collapse navbar-collapse">
-								<ul class="nav navbar-nav navbar-right">
-									{{# each navLinks}}
-									<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
-										<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);">{{ label }}</a>
-									</li>
-									{{/each}}
-									<li style="padding-left:35px;">
-										<button type="submit" class="btn btn-primary btn-md connect" style="background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none;margin-top:10px;	">connect</button>
-										<li>
-											<!-- <li style="padding-left:35px"> <a class="connect" style="padding: 3px 8px;color: #D55F61; font-family: SourceSansPro-Regular;font-size:17px" href="#" data-toggle="modal" data-target="#myModal">Connect</a></li> -->
-								</ul>
-							</div>
-						</div>
-					</div>
-						<div class="col-lg-1">
-						</div>
-</div>
 					</div>
 				</div>
 			</div>
@@ -142,55 +142,55 @@
 		{{{body}}}
 	</div>
 	<!-- <div class="container"> -->
-	<nav class="footer" style="background-color:rgb(34,34,34);">
+	<nav class="footer" style="">
 		<div class="fluid-container">
-			<div class="row" style="margin-right: 0px; margin-left: 0px;">
+			<div class="foot row" style="">
 
-				<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-					<div class="">
-						<img src="../images/GMT Identity _Goa Medical Travel.png" style="width:35%;height:auto;margin-top:10px;margin-left:26px;">
-						<p style="font-size:12.5px;font-family:SourceSansPro-Regular;margin-left: 26px; color:white">+91 832 240 5900</p>
-						<p style="font-size:12.5px;font-family:SourceSansPro-Regular;margin-left: 26px; color:white">info@goamedicaltravel.com</p>
-						<p style="font-size:12.5px;font-family:SourceSansPro-Regular;margin-left: 26px; color:white"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
+				<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 f_img">
 
-					</div>
+						<img src="../images/gmtwhite.png" style="">
+						<p style=" margin-bottom: 0px; padding-top: 15px; ">+91 832 240 5900</p>
+						<p style=" ">info@goamedicaltravel.com</p>
+						<p style=" margin-bottom: 0px;padding-top: 10px;"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
+
 				</div>
 
 				<div class="col-md-8 col-lg-8 col-xs-8 col-sm-8">
-					<div class="row" style="margin-right: 0px; margin-left: 0px;">
+					<div class="row foot_data" style="">
+
 						<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
-							<h4 style="color:white">Explore</h4>
-							<ul>
-								<li><a href="/help/" class="help-link help" style="color:white">About Us</a></li>
-								<li><a href="/support/" class="help-link support" style="color:white">How it Works</a></li>
-								<li><a href="/help/" class="help-link help" style="color:white">HIPAA</a></li>
-								<li><a href="/help/" class="help-link help" style="color:white">Privacy Policy</a></li>
-								<li><a href="/help/" class="help-link help" style="color:white">Contact Us</a></li>
-								<li><a href="/help/" class="help-link help" style="color:white">Blog</a></li>
+							<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Explore</h4>
+							<ul style="list-style-type:none; padding-left: 0px;">
+								<li><a href="/" style="	color: white;">About Us</a></li>
+								<li><a href="/" style="color:white; ">How it Works</a></li>
+								<li><a href="/" style="color:white; ">HIPAA</a></li>
+								<li><a href="/" style="color:white; ">Privacy Policy</a></li>
+								<li><a href="/" style="color:white;">Contact Us</a></li>
+								<li><a href="/" style="color:white; ">Blog</a></li>
 							</ul>
 						</div>
+
 						<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
 							<h4>&nbsp;</h4>
-
-							<ul>
-								<li><a href="/support/" class="help-link support" style="color:white">Our Mission</a></li>
-								<li><a href="/support/" class="help-link support" style="color:white">FAQs</a></li>
-								<li><a href="/support/" class="help-link support" style="color:white">Terms of Use</a></li>
-								<li><a href="/support/" class="help-link support" style="color:white">Management</a></li>
-								<li><a href="/support/" class="help-link support" style="color:white">News & Events</a></li>
+							<ul style="list-style-type:none; padding-left: 0px;">
+								<li><a href="/" style="color:white; ">Our Mission</a></li>
+								<li><a href="/" style="color:white; ">FAQs</a></li>
+								<li><a href="/" style="color:white; ">Terms of Use</a></li>
+								<li><a href="/" style="color:white; ">Management</a></li>
+								<li><a href="/" style="color:white;">News & Events</a></li>
 								<ul>
 						</div>
 
 						<div class="col-md-2 col-lg-2 col-xs-2 col-sm-2">
-							<h4 style="color:white">Connect Us</h4>
+							<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Connect On</h4>
 							<a href=""><i class="fa fa-facebook-square fa-2x" style="color:rgb(58,87,149)"></i></a>
 							<a href=""><i class="fa fa-twitter-square fa-2x" style="color:rgb(40,169,224)" ></i></a>
 							<a href=""><i class="fa fa-google-plus-square fa-2x" style="color:rgb(230,75,68)"></i></a>
-							<a href=""><i class="fa fa-instagram fa-2x" style="color:rgb(180,144,112)"></i></a>
+							<a href=""><i class="fa fa-linkedin-square fa-2x" style="color:rgb(1,119,181)"></i></a>
 						</div>
 						<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
 							<h4>&nbsp;</h4>
-							<div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 5px; margin-left: -25px;"></div>
+							<div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px; margin-left: -25px;"></div>
 						</div>
 
 					</div>
@@ -198,17 +198,7 @@
 			</div>
 			<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 			<script src="/js/pro.js"></script>
-			<!-- <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-						<h4>Social</h4>
-						<ul class="social">
-							<li>
-								<a href="https://www.facebook.com/Gmt" class="facebook" target="_blank">Facebook</a>
-							</li>
-							<li>
-								<a href="https://twitter.com/Gmt" class="twitter" target="_blank">Twitter</a>
-							</li>
-						</ul>
-					</div> -->
+
 
 		</div>
 		</div>
